# practicando

./: .gitignore  AWS_DEPLOY.md  README.md  package-lock.json  start_dev.sh  start_learn.sh  start_test.sh
backend/: Procfile  README.md  alembic.ini  db.py  dependencies.py  generate_test_data.py  main.py  models.py  pyproject.toml  requirements.txt  services.py  setup_env.sh  test_conjugation_overrides.py  utils.py
backend/alembic/: env.py
backend/alembic/backups/: 20250912_add_irregular_to_guesses.py.bak
backend/alembic/versions/: 20250911_adding_skipped_to_guess.py  20250912_add_irregular_to_guesses.py  4f4b898bf26b_add_skipped_column_to_guesses.py  611307de519f_populate_verbs_from_tubelex_data.py  6fcd840b7647_add_verb_round_models_and_rename_.py  add_questions_table.py  c8a1b429b45c_add_tubelex_count_and_tubelex_rank_to_.py  d74450cbe5c0_merge_heads_for_skipped_column.py
backend/data/: verbs-top500-from-tubelex.tsv
backend/routers/: metrics.py  questions.py  rounds.py  verbs.py
backend/scripts/: cleanup_test_data.py  dev.sh  generate_test_data.py  learn.sh  load_verbs.py  migrate.py  reset-db.sh  run.py  test.sh  validate_db.py
backend/tests/: conftest.py  test_api.py  test_services.py  test_utils.py
frontend/: README.md  package-lock.json  package.json
frontend-nextjs/: package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend-nextjs/src/app/: globals.css  layout.tsx  page.tsx
frontend-nextjs/src/components/: AccuracyTrendChart.tsx  ActivityChart.tsx  ConjugationModal.tsx  History.tsx  (+6 more)
frontend/public/: index.html
frontend/src/: App.js
(+17 files in other folders)
